--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,10 @@
    ],
    "source": [
     "# Code Here\n",
-    "A"
+    "A = np.array[ [[1402  191]\n",
+    " [1371  821]\n",
+    " [ 949 1437]\n",
+    " [ 147 1448]]]"
    ]
   },
   {
