--- a/index.ipynb
+++ b/index.ipynb
@@ -57,10 +57,7 @@
    ],
    "source": [
     "# Code Here\n",
-    "A = np.array[ [[1402  191]\n",
-    " [1371  821]\n",
-    " [ 949 1437]\n",
-    " [ 147 1448]]]"
+    "A = np.array[[[1402  191], [1371  821], [ 949 1437][ 147 1448]]]"
    ]
   },
   {
