--- a/index.ipynb
+++ b/index.ipynb
@@ -37,27 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A=\n",
-      " [[1402  191]\n",
-      " [1371  821]\n",
-      " [ 949 1437]\n",
-      " [ 147 1448]]\n",
-      "B=\n",
-      " [[1 2 3]\n",
-      " [4 5 6]]\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-c5c4367e0a78>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-c5c4367e0a78>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    A = np.array[[[1402  191], [1371  821], [ 949 1437], [ 147 1448]]]\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# Code Here\n",
-    "A = np.array[[[1402  191], [1371  821], [ 949 1437][ 147 1448]]]"
+    "A = np.array[[[1402  191], [1371  821], [ 949 1437], [ 147 1448]]]\n",
+    "print(A)"
    ]
   },
   {
