--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,7 @@
    ],
    "source": [
     "# Code Here\n",
-    "A = np.array[[[1402  191], [1371  821], [ 949 1437], [ 147 1448]]]\n",
+    "A = np.array[[[1402, 191], [1371 , 821], [ 949 , 1437], [ 147 1448]]]\n",
     "print(A)"
    ]
   },
