--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,7 @@
     "A = np.array([[1402, 191], [1371 , 821], [ 949 , 1437], [ 147, 1448]])\n",
     "print(A)\n",
     "B = \n",
-    "print"
+    "print(B)"
    ]
   },
   {
