--- a/index.ipynb
+++ b/index.ipynb
@@ -55,10 +55,12 @@
    "source": [
     "# Code Here\n",
     "import numpy as np\n",
-    "A = np.array([[1402, 191], [1371, 821], [ 949 , 1437], [ 147, 1448]])\n",
+    "A = np.array([[1402, 191], [1371, 821], [949, 1437], [147, 1448]])\n",
     "print(A)\n",
     "B = ([[1,2,3], [4,5,6]])\n",
-    "print(B)"
+    "print(B)\n",
+    "print ('A=\\n', A)\n",
+    "print ('B=\\n', B)"
    ]
   },
   {
