--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -74,13 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of A: (4, 2)\n",
+      "Shape of B: (2, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "# Code Here\n",
-    "np.shape(A)\n",
-    "#np.shape(B)"
+    "np.shape(A)\n"
    ]
   },
   {
