--- a/index.ipynb
+++ b/index.ipynb
@@ -74,13 +74,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code Here\n",
-    "np.shape(A)\n",
-    "#np.shape(B)"
+    "#np.shape(A)\n",
+    "np.shape(B)"
    ]
   },
   {
@@ -111,7 +122,8 @@
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "A[:]"
    ]
   },
   {
