--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,9 @@
    ],
    "source": [
     "# Code Here\n",
-    "A[:]"
+    "print(A[0.0])\n",
+    "print(A[0,1])\n",
+    "print(A[2,])"
    ]
   },
   {
