--- a/index.ipynb
+++ b/index.ipynb
@@ -178,25 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final output\n",
-      "\n",
-      " [[12.  4. 13.  8.]\n",
-      " [13.  5.  9.  9.]\n",
-      " [11. 11. 11. 17.]\n",
-      " [16. 14.  8. 10.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Code Here (due to random data , your output might be different)\n",
-    "M = np.zeroes((4,4))"
+    "M = np.zeros((4,4))\n",
+    "N = []\n",
+    "for x in range(0, M.shape[0]):\n",
+    "    for y in range(0, M.shape[1]):\n",
+    "        X[x][y] = random.randrange(1, 10) "
    ]
   },
   {
